# screen-mcp

./: .gitignore  README.md  install.sh  install_windows.bat  live.sh  pyproject.toml  server.py
screen_mcp/: __init__.py  executor.py  journal.py  memory.py  overlay.py  planner.py
