[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screen-mcp"
version = "8.0.0"
description = "Give Claude AI real-time vision of your screen — without screenshots or manual copying"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "claude", "ai", "screen", "vision", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
smart = ["anthropic>=0.80.0"]          # S 模式 AI 主动思考
ocr   = ["pytesseract>=0.3.10"]        # OCR 支持（非 macOS）
win   = ["pywin32>=306", "psutil>=5.9.0"]  # Windows 支持

[project.scripts]
screen-mcp = "server:main"

[project.urls]
Homepage   = "https://github.com/yanyu1919/screen-mcp"
Repository = "https://github.com/yanyu1919/screen-mcp"
Issues     = "https://github.com/yanyu1919/screen-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["screen_mcp"]
include  = ["server.py", "screen_mcp/**"]
